--- a/Simulator/Makefile
+++ b/Simulator/Makefile
@@ -1,9 +1,9 @@
 simulation : main.o
-	gcc -o simulation main.o
+	gcc -o simulation main.o -lpthread
 	./simulation
 
 main.o : 
-	gcc -c -o main.o main.c
+	gcc -c -o main.o main.c 
 
 clean :
 	rm *.o simulation
