fix bug in create_node and seperate blockhash struct

--- a/FirmChain_sim/Makefile
+++ b/FirmChain_sim/Makefile
@@ -1,9 +1,12 @@
-Firmchain_sim : main.o
-	gcc -o simulation main.o -lpthread
+Firmchain_sim : main.o sha256.o
+	gcc -o Firmchain_sim main.o sha256.o -lpthread
 	./Firmchain_sim
 
 main.o : 
 	gcc -c -o main.o main.c 
+	
+sha256.o :
+	gcc -c -o sha256.o sha256.c
 
 clean :
-	rm *.o simulation
+	rm *.o Firmchain_sim
